fix: Remove unnecessary height calculation from ChatWindow on mobile
- Remove calc(100vh - 60px) mobile override - there is no header in shop chat
- ChatWindow now uses 100vh on all viewport sizes
- Fixes wasted space on mobile viewports
- Improves mobile UX by using full viewport height

--- a/template/components/Chat/ChatWindowTemplate.module.scss
+++ b/template/components/Chat/ChatWindowTemplate.module.scss
@@ -5,10 +5,6 @@
   @include flex-column;
   height: 100vh;
   background-color: $gray-50;
-
-  @include mobile {
-    height: calc(100vh - 60px);
-  }
 }
 
 .messagesContainer {
